[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Images/Prototype/Portraits/male_03.png" type="Texture" id=1]
[ext_resource path="res://core/battlesystem/BattleUI.gd" type="Script" id=2]
[ext_resource path="res://core/battlesystem/BattleLog.gd" type="Script" id=3]
[ext_resource path="res://core/battlesystem/TurnQueueContainer.gd" type="Script" id=4]
[ext_resource path="res://assets/Images/Prototype/Portraits/male_01.png" type="Texture" id=5]

[node name="BattleUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ActiveUnitContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -148.0
margin_right = 134.0
margin_bottom = -62.0

[node name="Vbox" type="VBoxContainer" parent="ActiveUnitContainer"]
margin_right = 134.0
margin_bottom = 86.0

[node name="ActiveUnitLabel" type="Label" parent="ActiveUnitContainer/Vbox"]
margin_right = 134.0
margin_bottom = 14.0
text = "Active Unit: Player"

[node name="HealthLabel" type="Label" parent="ActiveUnitContainer/Vbox"]
margin_top = 18.0
margin_right = 134.0
margin_bottom = 32.0
text = "Health: 0"

[node name="RangeLabel" type="Label" parent="ActiveUnitContainer/Vbox"]
margin_top = 36.0
margin_right = 134.0
margin_bottom = 50.0
text = "Range: 0"

[node name="SpeedLabel" type="Label" parent="ActiveUnitContainer/Vbox"]
margin_top = 54.0
margin_right = 134.0
margin_bottom = 68.0
text = "Speed: 0"

[node name="ActionPointsLabel" type="Label" parent="ActiveUnitContainer/Vbox"]
margin_top = 72.0
margin_right = 134.0
margin_bottom = 86.0
text = "Action Points: 0"

[node name="BattleLog" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 463.0
margin_top = -149.0
margin_right = 633.0
margin_bottom = -28.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="BattleLog"]
margin_right = 170.0
margin_bottom = 121.0

[node name="BattleLogContainer" type="VBoxContainer" parent="BattleLog/Panel"]
margin_left = 10.0
margin_top = 6.0
margin_right = 164.0
margin_bottom = 121.0

[node name="Title" type="Label" parent="BattleLog/Panel/BattleLogContainer"]
margin_right = 154.0
margin_bottom = 14.0
text = "Battle Logs"
align = 1

[node name="LogScroll" type="ScrollContainer" parent="BattleLog/Panel/BattleLogContainer"]
margin_top = 18.0
margin_right = 154.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_vertical = 55

[node name="LogList" type="VBoxContainer" parent="BattleLog/Panel/BattleLogContainer/LogScroll"]
margin_top = -55.0
margin_right = 207.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="BattleLog/Panel/BattleLogContainer/LogScroll/LogList"]
margin_right = 207.0
margin_bottom = 14.0
text = "Log line"

[node name="Label2" type="Label" parent="BattleLog/Panel/BattleLogContainer/LogScroll/LogList"]
margin_top = 18.0
margin_right = 207.0
margin_bottom = 32.0
text = "Log line"

[node name="Label3" type="Label" parent="BattleLog/Panel/BattleLogContainer/LogScroll/LogList"]
margin_top = 36.0
margin_right = 207.0
margin_bottom = 50.0
text = "Log line"

[node name="Label4" type="Label" parent="BattleLog/Panel/BattleLogContainer/LogScroll/LogList"]
margin_top = 54.0
margin_right = 207.0
margin_bottom = 68.0
text = "Log line"

[node name="Label5" type="Label" parent="BattleLog/Panel/BattleLogContainer/LogScroll/LogList"]
margin_top = 72.0
margin_right = 207.0
margin_bottom = 86.0
text = "Log line"

[node name="Label6" type="Label" parent="BattleLog/Panel/BattleLogContainer/LogScroll/LogList"]
margin_top = 90.0
margin_right = 207.0
margin_bottom = 104.0
text = "Log line"

[node name="Label7" type="Label" parent="BattleLog/Panel/BattleLogContainer/LogScroll/LogList"]
margin_top = 108.0
margin_right = 207.0
margin_bottom = 122.0
text = "Log line"

[node name="Label8" type="Label" parent="BattleLog/Panel/BattleLogContainer/LogScroll/LogList"]
margin_top = 126.0
margin_right = 207.0
margin_bottom = 140.0
text = "Log linedf asdfasdfasdfasdfdasda"

[node name="TurnQueueContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -56.0
margin_right = 320.0
margin_bottom = -6.0
script = ExtResource( 4 )

[node name="Hbox" type="HBoxContainer" parent="TurnQueueContainer"]
margin_right = 320.0
margin_bottom = 50.0

[node name="ActiveCharacter" type="Panel" parent="TurnQueueContainer/Hbox"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="TextureRect" type="TextureRect" parent="TurnQueueContainer/Hbox/ActiveCharacter"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true

[node name="Queuebox" type="HBoxContainer" parent="TurnQueueContainer/Hbox"]
margin_left = 54.0
margin_right = 86.0
margin_bottom = 50.0

[node name="TextureRect2" type="TextureRect" parent="TurnQueueContainer/Hbox/Queuebox"]
margin_right = 32.0
margin_bottom = 50.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
